@@ -922,10 +922,11 @@ Audio sources are
   </extension>
 </addon>
 
-<addon id="plugin.video.inetcom.tv" name="[COLOR FF86BA0D]Inetcom.tv[/COLOR]" version="0.3.3" provider-name="Silhouette">
+<addon id="plugin.video.inetcom.tv" name="[COLOR FF86BA0D]Inetcom.tv[/COLOR]" version="0.3.4" provider-name="Silhouette">
   <requires><import addon="xbmc.python" version="2.1.0"/></requires>
   <extension point="xbmc.python.pluginsource"  provides="video" library="default.py"><provides>video</provides></extension>
-  <extension point="xbmc.addon.metadata">    <summary>Online TV from inetcom.tv</summary>
+  <extension point="xbmc.addon.metadata">
+    <summary>Online TV from inetcom.tv</summary>
     <description>Online TV from inetcom.tv</description>
     <platform>all</platform>
   </extension>
@@ -1329,7 +1330,7 @@ I hope you like this!
     </extension>
 </addon>
 
-<addon id="plugin.video.rodina.tv" name="[COLOR FF23a0e3]Rodina.TV[/COLOR]" version="2.5.1" provider-name="Rodina TV">
+<addon id="plugin.video.rodina.tv" name="[COLOR FF23a0e3]Rodina.TV[/COLOR]" version="2.6.1" provider-name="Rodina TV">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="script.service.rodina.tv" version="1.0.1"/>
